--- a/report.lyx
+++ b/report.lyx
@@ -9,8 +9,8 @@
 \language_package default
 \inputencoding auto
 \fontencoding global
-\font_roman default
-\font_sans default
+\font_roman lmodern
+\font_sans lmss
 \font_typewriter default
 \font_default_family default
 \use_non_tex_fonts false
@@ -24,7 +24,8 @@
 \output_sync 0
 \bibtex_command default
 \index_command default
-\paperfontsize default
+\paperfontsize 12
+\spacing single
 \use_hyperref false
 \papersize default
 \use_geometry false
@@ -60,6 +61,101 @@
 \begin_body
 
 \begin_layout Standard
+I have to variants of steady state calculations.
+ Everything is calculated with parameters given in Short--Dold paper (SD)---over
+drive, gamma, etc.
+\end_layout
+
+\begin_layout Standard
+The difference is the following.
+ Figure
+\begin_inset space ~
+\end_inset
+
+
+\begin_inset CommandInset ref
+LatexCommand ref
+reference "fig:steady-rho"
+
+\end_inset
+
+ shows calculations where formula (5) from SD is used blindly.
+ The pictures (mine and SD's) in Figure
+\begin_inset space ~
+\end_inset
+
+
+\begin_inset CommandInset ref
+LatexCommand ref
+reference "fig:steady-rho"
+
+\end_inset
+
+ look the same.
+ What I don't like in the formula (5) is that in the expression for reaction
+ rate 
+\begin_inset Formula $r_{\mathrm{B}}$
+\end_inset
+
+ SD multiply by density:
+\begin_inset Formula 
+\[
+r_{B}=\rho fy\exp\left(\frac{1}{\epsilon_{B}}\left(\frac{1}{T_{B}}-\frac{1}{T}\right)\right).
+\]
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+It's a mystery for me, because, as far as I understand, forward reaction
+ rate is calculated as the product of reaction rate constant and concentrations
+ of reagents.
+\end_layout
+
+\begin_layout Standard
+Figure
+\begin_inset space ~
+\end_inset
+
+shows calculation, where 
+\begin_inset Formula $r_{B}$
+\end_inset
+
+ is calculated with the expression as I believe it should be:
+\begin_inset Formula 
+\[
+r_{B}=fy\exp\left(\frac{1}{\epsilon_{B}}\left(\frac{1}{T_{B}}-\frac{1}{T}\right)\right).
+\]
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+We see that on the Figure
+\begin_inset space ~
+\end_inset
+
+
+\begin_inset CommandInset ref
+LatexCommand ref
+reference "fig:steady"
+
+\end_inset
+
+ there is a small discrepancy in the results---mine calculations shows faster
+ decay of concentration of species F.
+\end_layout
+
+\begin_layout Standard
+So, when I use the formula that I think is correct, I get a little bit different
+ result than SD.
+\end_layout
+
+\begin_layout Standard
 \begin_inset Float figure
 wide false
 sideways false
@@ -68,7 +164,7 @@ status open
 \begin_layout Plain Layout
 \align center
 \begin_inset Graphics
-	filename images/steady_structure.eps
+	filename images/steady_structure_rho.eps
 
 \end_inset
 
@@ -90,11 +186,17 @@ status open
 
 \begin_layout Plain Layout
 Steady detonation profiles for concentration of species F (solid lines)
- and species Y (dashed line)
-\begin_inset space ~
+ and species Y (dashed line)---top picture is mine, and bottom picture is
+ from SD paper.
+ Here we calculate 
+\begin_inset Formula $r_{B}$
 \end_inset
 
-–top picture is mine, and bottom picture is from SD paper.
+ multiplying by 
+\begin_inset Formula $\rho$
+\end_inset
+
+ in agreement with SD paper.
  Markers denote profiles obtained for different values of temperature 
 \begin_inset Formula $T_{\mathrm{B}}$
 \end_inset
@@ -128,6 +230,13 @@ of chain-branching reaction (2nd stage): square
 \end_inset
 
 .
+\begin_inset CommandInset label
+LatexCommand label
+name "fig:steady-rho"
+
+\end_inset
+
+
 \end_layout
 
 \end_inset
@@ -135,7 +244,97 @@ of chain-branching reaction (2nd stage): square
 
 \end_layout
 
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset Float figure
+wide false
+sideways false
+status open
+
 \begin_layout Plain Layout
+\align center
+\begin_inset Graphics
+	filename images/steady_structure.eps
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Plain Layout
+\align center
+\begin_inset Graphics
+	filename images/steady_structure_short_dolds.pdf
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Plain Layout
+\begin_inset Caption
+
+\begin_layout Plain Layout
+Steady detonation profiles for concentration of species F (solid lines)
+ and species Y (dashed line)---top picture is mine, and bottom picture is
+ from SD paper.
+ Here we calculate 
+\begin_inset Formula $r_{B}$
+\end_inset
+
+ without multiplying by 
+\begin_inset Formula $\rho$
+\end_inset
+
+ in constrast with SD paper.
+ Markers denote profiles obtained for different values of temperature 
+\begin_inset Formula $T_{\mathrm{B}}$
+\end_inset
+
+
+\begin_inset space ~
+\end_inset
+
+of chain-branching reaction (2nd stage): square
+\begin_inset space ~
+\end_inset
+
+
+\begin_inset Formula $T_{\mathrm{B}}=0.8$
+\end_inset
+
+; circle
+\begin_inset space ~
+\end_inset
+
+
+\begin_inset Formula $T_{\mathrm{B}}=0.85$
+\end_inset
+
+; diamond 
+\begin_inset Formula $T_{\mathrm{B}}=0.9$
+\end_inset
+
+; triangle 
+\begin_inset Formula $T_{\mathrm{B}}=0.95$
+\end_inset
+
+.
+\begin_inset CommandInset label
+LatexCommand label
+name "fig:steady"
+
+\end_inset
+
+
+\end_layout
+
+\end_inset
+
 
 \end_layout
 
